--- a/main.css
+++ b/main.css
@@ -1,10 +1,20 @@
+.beginning {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto;
+}
 .show, .hide, .both {
+    width: 12vw;
+    margin: 10px;
     display: block;
     border: 1px solid black;
     padding: 15px;
 }
-
-
+.beginning p {
+    margin: 20px;
+}
 .paragraph__hidden {
     display: none;
 }
