--- a/#2 Chowanie obrazka/css.css
+++ b/#2 Chowanie obrazka/css.css
@@ -45,7 +45,7 @@ button {
   font-size: 36px;
   cursor: pointer;
   transition: color .3s, box-shadow .3s;
-  box-shadow: 3px 3px 10px #00cfff
+  box-shadow: 3px 3px 10px #00cfff;
 }
 
 button:hover {
